--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>SB SSTV Encoder</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/imsbg/SBSSTV/a30b6df8bee927f84fd04a2197ceb7bebef2735b/sb%20sstv.svg">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/imsbg/SBSSTV/refs/heads/main/sg%20sstv.png">
     <!-- Light mode theme color -->
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 
@@ -213,7 +213,7 @@
 </head>
 <body>
     <svg width="0" height="0" style="position:absolute"> <defs> <symbol id="icon-sun" viewBox="0 0 24 24"> <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.106a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18.75a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-1.5a.75.75 0 01.75-.75zM5.106 17.834a.75.75 0 001.06 1.06l1.591-1.59a.75.75 0 00-1.06-1.061l-1.591 1.59zM3 12a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5H2.25A.75.75 0 013 12zM6.106 5.106a.75.75 0 00-1.06 1.06l1.59 1.591a.75.75 0 001.061-1.06l-1.59-1.591z"/> </symbol> <symbol id="icon-moon" viewBox="0 0 24 24"> <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-3.51 1.713-6.622 4.43-8.54a.75.75 0 01.818.162z" clip-rule="evenodd" /> </symbol> <symbol id="icon-play" viewBox="0 0 24 24"> <path d="M6 4l12 8-12 8V4z"/> </symbol> <symbol id="icon-pause" viewBox="0 0 24 24"> <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/> </symbol> </defs> </svg>
-    <div id="splash-screen"> <div class="splash-icon-container"> <img src="https://raw.githubusercontent.com/imsbg/SBSSTV/a30b6df8bee927f84fd04a2197ceb7bebef2735b/sb%20sstv.svg" alt="App Logo" id="splash-logo"> </div> <div id="splash-bottom-text"> <span class="from-text" data-lang-key="splashFrom">an app by</span> <span class="meta-text">Sandeep Biswal G <br> (ସନ୍ଦୀପ୍ ବିଶ୍ବାଳ ଜି)</span> </div> </div>
+    <div id="splash-screen"> <div class="splash-icon-container"> <img src="https://raw.githubusercontent.com/imsbg/SBSSTV/refs/heads/main/sg%20sstv.png" alt="App Logo" id="splash-logo"> </div> <div id="splash-bottom-text"> <span class="from-text" data-lang-key="splashFrom">an app by</span> <span class="meta-text">Sandeep Biswal G <br> (ସନ୍ଦୀପ୍ ବିଶ୍ବାଳ ଜି)</span> </div> </div>
     <div id="app-container">
         <header> <span id="app-title">SB SSTV Encoder</span> <div class="header-controls"> <button id="lang-toggle" title="Switch Language">ଓ</button> <button id="theme-toggle" title="Toggle Theme"> <svg><use xlink:href="#icon-sun"></use></svg> </button> <button id="menu-toggle" title="Open Menu"> <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg> </button> </div> </header>
         <nav id="side-menu"> <div class="menu-header">SB SSTV Encoder</div> <ul> <li><a href="#" class="menu-item" data-page="home" data-lang-key="menuHome">Home</a></li> <li><a href="#" class="menu-item" data-page="what-is-sstv" data-lang-key="menuWhatIsSSTV">What is SSTV?</a></li> <li><a href="#" class="menu-item" data-page="about" data-lang-key="menuAbout">About</a></li> </ul> </nav>
